// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remove-overridden-custom-properties overridden custom properties should be removed 1`] = `
":root {
  --color-secondary: green;
  --color-primary: blue;
  --color-header: gray;
}
"
`;

exports[`remove-overridden-custom-properties overridden custom properties with \`!important\` rule should not be removed 1`] = `
":root {
  --color-primary: blue;
  --color-header: gray !important;
  --color-secondary: yellow !important;
}
"
`;
